--- a/src/css/SideBar.module.css
+++ b/src/css/SideBar.module.css
@@ -1,6 +1,6 @@
 .sideBarCont{
   position: relative;
-  width: 435px;
+  width: 19.2rem;
   height: 100vh;
   background-color: rgb(32, 32, 37);
   top: 0px;
