--- a/src/css/Chat.module.css
+++ b/src/css/Chat.module.css
@@ -3,8 +3,11 @@
   width: 100%;
   text-align: center;
   overflow: hidden;
-  padding: 100px 24px;
-  padding-right: 170px;
-  padding-left: 170px;
+  padding-top: 100px;
+  padding-right: 10px;
+  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
