--- a/src/components/Input.module.css
+++ b/src/components/Input.module.css
@@ -3,7 +3,7 @@
   width: 90%;
   max-width: 750px;
   bottom: 50px;
-  background-color: rgb(62, 65, 82);
+  background-color: var(--gray-700);
   border-radius: 5px;
   box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.76);
   padding: 0px;
