--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 19.2rem;
   height: 100vh;
-  background-color: rgb(32, 32, 37);
+  background-color: var(--gray-900);
   top: 0px;
   left: 0px;
   padding: 8px;
