--- a/src/components/ChatBox.module.css
+++ b/src/components/ChatBox.module.css
@@ -1,11 +1,16 @@
-.title{
+.title {
   font-size: 2.25rem;
   gap: 0.5rem;
   font-weight: 600;
   line-height: 2.5rem;
   letter-spacing: -1px;
+  color: var(--gray-600);
 }
 
-.chatBoxCont{
+.subtitle {
+  color: var(--gray-500);
+}
+
+.chatBoxCont {
   height: 450px;
 }
