--- a/src/components/Input.module.css
+++ b/src/components/Input.module.css
@@ -1,15 +1,16 @@
 .inputCont{
   position: relative;
-  width: 90%;
+  width: 100%;
   max-width: 750px;
   bottom: 50px;
   background-color: var(--gray-700);
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.76);
-  padding: 0px;
+  padding: 4px;
   display: flex;
   justify-content: space-between;
   vertical-align: middle;
+  align-items: center;
 }
 
 .formCont{
@@ -21,7 +22,7 @@
 .inputCont input{
   height: 45px;
   border: none;
-  color: rgb(226, 226, 226);
+  color: var(--gray-50);
   background-color: transparent;
   padding-left: 17px;
 }
@@ -37,17 +38,18 @@
 }
 
 .submitButton{
-  width: 40px;
   border: none;
   appearance: none;
   width: 20px;
   height: 20px;
   border-radius: 5px;
-  padding-right: 20px;
-  margin: 15px 10px 0px 15px;
-  color: rgb(226, 226, 226);
+  padding: 10px;
+  margin: 0px 5px 0px 0px;
+  color: var(--gray-50);
   background-color: transparent;
   transition-duration: .2s;
+  display: flex;
+  align-items: center;
 }
 
 .submitButton:hover{
