--- a/src/app/components/Input.module.css
+++ b/src/app/components/Input.module.css
@@ -40,10 +40,9 @@
 .submitButton{
   border: none;
   appearance: none;
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   border-radius: 5px;
-  padding: 10px;
   margin: 0px 5px 0px 0px;
   color: var(--gray-50);
   background-color: transparent;
@@ -55,4 +54,16 @@
 .submitButton:hover{
   cursor: pointer;
   background-color: rgb(32, 32, 37);
+}
+
+.submitDiv {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.submitButton:disabled {
+  cursor: default;
+  background-color: transparent;
 }
