implementing hdp-3.5 & styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,3 +12,23 @@ body{
   color: var(--gray-50);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+::-webkit-scrollbar {
+  z-index: 999;
+  width: 8px;
+  height: 100%;
+
+}
+
+::-webkit-scrollbar-track {
+  background: var(--gray-800);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--gray-300);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--gray-200);
+}
