--- a/src/app/components/Input.module.css
+++ b/src/app/components/Input.module.css
@@ -17,6 +17,9 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  position: absolute;
+  bottom: 0;
+  height: auto;
 }
 
 .inputCont input{
@@ -53,7 +56,7 @@
 
 .submitButton:hover{
   cursor: pointer;
-  background-color: rgb(32, 32, 37);
+  background-color: var(--chat-gpt-color);
 }
 
 .submitDiv {
